# pothole-detection-backend

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README-ENV  README.md  a.txt  compose.yml  database.py  main.py  requirements.txt  road_damage.py
.cargo/: config.toml
.sqlx/: query-0fa439595b2bb4b0c94f77ce99d590f72b977980b1ef657f5b31cfc813aff7be.json  query-12eb2025e24ed54a47ec48db807a67246303876c9128e880eba0fa035d025b72.json  query-2bc8367d947b39f981c953a68e22213bd9034c645d9de14f708b6403e0dd0cd5.json  query-3ec0cdf192af55e747bf6a7800291fd3838d06852e910b3b282769b79ba2e048.json  query-4fff4f823c05fdae2bb2f64167ee0d795bec27ff11850648b7e9fa3dc86a2753.json  query-9c9f52c17db5891375ae097b0c9fcf83ca830ac2187d072a40a234b14a4e3f34.json  query-ba4c3e726ee422ff28a08a5c7e5396bbb36ffcae6021293a0ce65de020001818.json  query-c65c11ed3d9dd355863fc7c61097b08f2b65e39930697b0e26db222f7fcb14ce.json
common_data/: Cargo.toml
common_data/src/: lib.rs
database/: README.md
frontend_requests/: Cargo.toml
frontend_requests/src/: lib.rs
migrations/: 20230907204342_road_damage.sql
server/: .env  Cargo.toml  Dockerfile  compose.yml  detection.py
server/migrations/: 20230907204342_road_damage.sql  20230910061050_road_damage.sql
server/src/: database.rs  detection.rs  main.rs  routes.rs
server/src/routes/: analysis.rs
src/: database.rs  lib.rs  main.rs  models.rs  routes.rs
