[package]
name = "pothole-detection-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["tracing"] }
redis = "0.23.3"
serde = "1.0.188"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }

tower-http = { version = "0.4.0", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
