[package]
name = "pothole-detection-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["tracing"] }
exif = "0.0.1"
reqwest = "0.11.20"
rstar = "0.11.0"
serde = "1.0.188"
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["sqlite"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
