[package]
name = "frontend_requests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["json"] }
common_data = { path = "../common_data/"}
anyhow = "1.0.75"
