[package]
name = "pothole-detection-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["tracing", "query"] }
dotenvy = "0.15.7"
rstar = "0.11.0"
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
common_data = { path = "../common_data/"}
rand = { version = "0.8.5", optional = true}


[features]
mock_data = ["dep:rand"]
default = ["mock_data"]